--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <p>git commit -m "your meaningful commit message"</p>
         <p>git push</p>
     </div>
+
+    <div>
+        <img src="./images/pexels-lum3n-44775-1410235.jpg" width="600px" height="400px" alt="">
+    </div>
 </body>
 
 </html>
